force-app/main/default/objects/Appointment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <description>The customer who booked the appointment</description>
    <required>true</required>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Appointments_Customer</relationshipName>
    <relationshipLabel>Appointments (Customer)</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>