force-app/main/default/objects/Appointment__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
    <description>Appointment end date and time</description>
    <required>true</required>
</CustomField>