force-app/main/default/objects/Appointment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Lookup</type>
    <description>The location where the appointment takes place</description>
    <required>true</required>
    <referenceTo>Account</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <relationshipLabel>Appointments</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>