force-app/main/default/objects/Appointment__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Lookup</type>
    <description>The service type booked</description>
    <required>true</required>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <relationshipLabel>Appointments</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>