force-app/main/default/objects/Appointment__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <type>Lookup</type>
    <description>The staff member assigned to the appointment</description>
    <required>true</required>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Appointments_Staff</relationshipName>
    <relationshipLabel>Appointments (Staff)</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>