force-app/main/default/objects/Appointment__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
    <description>Appointment start date and time</description>
    <required>true</required>
</CustomField>